Add project reference to Core project

--- a/PropertyPro.Core/PropertyPro.Core.csproj
+++ b/PropertyPro.Core/PropertyPro.Core.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PropertyPro.Infrastructure\PropertyPro.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
